--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume Stephano Apiolaza</title>
+        <title>Resume Dagoberto Paez</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -19,8 +19,8 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Stephano Apiolaza</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpeg" alt="Stephano Apiolaza" /></span>
+                <span class="d-block d-lg-none">Dagoberto Paez</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpeg" alt="Dagoberto Paez" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -39,18 +39,18 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Stephano
-                        <span class="text-primary">Apiolaza</span>
+                        Dagoberto
+                        <span class="text-primary">Páez</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Senior Software Development & Software Architect & Technical Coach · <a href="tel:+(56)933251730" target="_blank">+(56) 933251730</a>·
-                        <a href="mailto:stephano.apiolaza@gmail.com">stephano.apiolaza@gmail.com</a>
+                        Técnico en operacion y mantenimiento · <a href="tel:+(56)964489740" target="_blank">+(56) 964489740</a>·
+                        <a href="mailto:dagodiazp26@gmail.com">dagodiazp26@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I’m a versatile, creative, and enthusiastic full-stack software developer with knowledge of a wide range of technologies, programming languages and environments. I have worked in many projects +55.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="./assets/cv/Stephano Apiolaza Summary.pdf" download><i class="fa-regular fa-file-pdf"></i></a>
-                        <a class="social-icon" href="https://www.linkedin.com/in/stephanoapiolaza/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/stephanoapiolaza" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="./assets/cv/Dagoberto Páez.pdf" download><i class="fa-regular fa-file-pdf"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/dagoberto-p%C3%A1ez-d%C3%ADaz-9a82a1126/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/Dagolord" target="_blank"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -61,14 +61,13 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Technical Coach, Banco de Chile</h3>
-                            <div class="subheading mb-3">Oracle Cloud Infrastructure 2022 Certified Foundations</div>
-                            <p>My approach prepares developers get certified OCI 2022 Foundations Associate in the company Code Test: (1Z0-1085-22) 
-                                Also, Every week I do a speech with support documentation with all kind of topics of the exam.</p>
+                            <h3 class="mb-0">Técnico en operacion y mantenimiento, Solarig Chile</h3>
+                            <div class="subheading mb-3">Técnico en terreno Full O&M Solar</div>
+                            <p>Especialista en mantenimiento operacional de planta fotovoltaica, en sistema de inversores y seguidores.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Aug 2022 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Abril 2022 - Present</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <!--<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Technical Coach, Banco de Chile</h3>
                             <div class="subheading mb-3">Onboarding Backend & Frontend</div>
@@ -118,19 +117,19 @@
                     </div>
                 </div>
             </section>
-            <hr class="m-0" />
+            <hr class="m-0" /> -->
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">DuocUC</h3>
-                            <div class="subheading mb-3">Computer Information Technology Program</div>
+                            <h3 class="mb-0">Universidad de atacama</h3>
+                            <div class="subheading mb-3">Automatización industrial</div>
                             <div>Computer Science Engineering - Innovation Team, Startup Team, Design Factory</div>
                             <p>The highest score in class</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Mar 2012 - Dec 2015</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Mar 2014 - Dec 2016</span></div>
                     </div>
                 </div>
             </section>
